[package]
name = "sun_moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
cors = ["dep:actix-cors"]

[dependencies]
rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }

actix-cors = { version = "0.7.0", optional = true }
actix-web = "4.5.1"
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.20"
log4rs = "1.2.0"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# swagger
utoipa = { version = "4.2.0", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = [
    "actix-web",
], optional = true }

# 验证
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive", "unic"] }